Change RepositoryGame type

--- a/config.yml
+++ b/config.yml
@@ -8,9 +8,10 @@ repositories:
   - name: instead-games-sandbox
     url: http://instead-games.ru/xml2.php
 
-#games_path: ~/.instead/games/
 interpreter_command: /Applications/Instead.app/Contents/MacOS/sdl-instead
 version: 3.0.0
 use_builtin_interpreter: false
 lang: ru
 check_update_on_start: true
+#games_path: ~/.instead/games/
+#insteadman_path: ~/.instead/insteadman/
