GTK: add repositories updating, interpreter finding at the start

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /resources/testdata/insteadman/repositories/*
 !/resources/testdata/insteadman/repositories/test.xml
 /build
+/resources/gtk/*.glade~
