Change icon format

--- a/resources/unix/insteadman.desktop
+++ b/resources/unix/insteadman.desktop
@@ -7,7 +7,7 @@ Comment=INSTEAD Manager
 Comment[ru]=INSTEAD менеджер
 Comment[uk]=INSTEAD менеджер
 Exec=/usr/bin/insteadman-gtk
-Icon=/usr/share/pixmaps/insteadman.png
+Icon=insteadman
 Terminal=false
 Type=Application
 Categories=Application;Game;
