--- a/resources/windows/setup.iss.in
+++ b/resources/windows/setup.iss.in
@@ -4,7 +4,7 @@ AppVerName=InsteadMan {{version}}
 DefaultDirName={pf}\InsteadMan
 DefaultGroupName=Games
 UninstallDisplayIcon={app}\insteadman-gtk.exe
-OutputDir=..\..\build\windows-386\
+OutputDir=..\..\build\
 OutputBaseFilename=insteadman-windows-setup-{{version}}
 AllowNoIcons=true
 SetupIconFile=..\..\resources\images\logo.ico
