--- a/resources/testdata/insteadman/config.yml
+++ b/resources/testdata/insteadman/config.yml
@@ -1,5 +1,9 @@
 check_update_on_start: true
 games_path: ../../resources/testdata/games/
+gtk:
+  hide_sidebar: false
+  main_height: 0
+  main_width: 0
 insteadman_path: ../../resources/testdata/insteadman/
 interpreter_command: ""
 lang: ru
