--- a/resources/darwin/bundle-gtk/Info-insteadman.plist.in
+++ b/resources/darwin/bundle-gtk/Info-insteadman.plist.in
@@ -9,7 +9,7 @@
     <key>CFBundleExecutable</key>
     <string>insteadman</string>
     <key>CFBundleGetInfoString</key>
-    <string>3.1.0, (C) 2015 - 2018 InsteadMan https://jhekasoft.github.io/insteadman/en/</string>
+    <string>{{version}}, (C) 2015 - 2018 InsteadMan https://jhekasoft.github.io/insteadman/en/</string>
     <key>CFBundleIconFile</key>
     <string>InsteadMan.icns</string>
     <key>CFBundleIdentifier</key>
@@ -19,11 +19,11 @@
     <key>CFBundlePackageType</key>
     <string>APPL</string>
     <key>CFBundleShortVersionString</key>
-    <string>3.1.0</string>
+    <string>{{version}}</string>
     <key>CFBundleSignature</key>
     <string>????</string>
     <key>CFBundleVersion</key>
-    <string>3.1.0</string>
+    <string>{{version}}</string>
     <key>NSHumanReadableCopyright</key>
     <string>Copyright 2015 - 2018 InsteadMan, MIT.</string>
     <key>LSMinimumSystemVersion</key>
