GTK, I18n: add Uk translate, update Makefile

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /resources/windows/instead
 /resources/windows/setup.iss
 /resources/darwin/bundle-gtk/Info-insteadman.plist
+/resources/locale/*.pot
+*.po~
