--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,14 +1,20 @@
 {
   "name": "insteadman-wails",
-  "author": "Eugene Efremov<jhekasoft@gmail.com>",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "core-js": "^3.6.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "typescript": "^4.1.2",
+    "web-vitals": "^1.0.1",
     "wails-react-scripts": "3.0.1-2",
-    "react-modal": "3.11.2",
     "@wailsapp/runtime": "^1.0.10"
   },
   "scripts": {
@@ -18,7 +24,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
